# pico-projector

./: .gitignore  CMakeLists.txt  graycodedecoder.cpp  graycodedecoder.h  main.cpp  myqwidget.cpp  myqwidget.h  pico-projector.pro  pico-projector.pro.user.647b68b  utility.cpp  utility.h
include/handprojector_calibration/: graycode.h  graycodedecoder.h  utility.h
release/: CMakeCache.txt  Makefile  cmake_install.cmake  handprojector_calibration.cbp  handprojector_calibration_main  handprojector_tracker.cbp  handprojector_tracker_main  moc_myqwidget.cpp  pico-projector
src/: graycode.cpp  graycodedecoder.cpp  main.cpp  rgbprocess.h  utility.cpp
